--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bootstrap-icons": "^1.11.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.5.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
