--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.1",
     "cloudinary": "^1.41.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
@@ -30,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-localstorage": "^3.0.5",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.5",
+    "razorpay": "^2.9.2"
   }
 }
