--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "dotenv": "^16.3.1",
-    "easyinvoice": "^3.0.24",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "localStorage": "^1.0.4",
     "moment": "^2.29.4",
@@ -34,9 +34,6 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-localstorage": "^3.0.5",
     "nodemailer": "^6.9.5",
-    "pdfjs-dist": "^3.11.174",
-    "pdfkit": "^0.13.0",
-    "pdfkit-table": "^0.1.99",
     "razorpay": "^2.9.2"
   }
 }
