--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookieparser": "^0.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "excel4node": "^1.8.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "html-pdf": "^3.0.1",
@@ -32,6 +33,7 @@
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.2",
     "node-localstorage": "^3.0.5",
     "nodemailer": "^6.9.5",
     "razorpay": "^2.9.2"
