--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "excel4node": "^1.8.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "html-pdf": "^3.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "localStorage": "^1.0.4",
     "moment": "^2.29.4",
