--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.1",
     "cloudinary": "^1.41.0",
-    "connect-mongo": "^5.0.0",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
@@ -34,6 +34,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.5",
+    "phantomjs-prebuilt": "^2.1.16",
     "razorpay": "^2.9.2",
     "socket.io": "^4.7.2"
   }
